finish function create and remove a recruitment

--- a/src/server_employer/Source/views/contents/add_recruitment.hbs
+++ b/src/server_employer/Source/views/contents/add_recruitment.hbs
@@ -32,9 +32,9 @@
             <div id="text_sex_edit_news">Giới tính</div>
             <select name="sex_recruitment" id="sex_edit_news" required="">
                 <option disabled selected value>Giới tính</option>
+                <option value="Khác" class="op_select_method_work">Không yêu cầu</option>
                 <option value="Nam" class="op_select_method_work">Nam</option>
                 <option value="Nữ" class="op_select_method_work">Nữ</option>
-                <option value="Khác" class="op_select_method_work">Khác</option>
             </select>
             {{!-- <input id="sex_edit_news" name="sex_recruitment" type="hidden" value="" /> --}}
 
@@ -42,11 +42,10 @@
 
             <select name="experience_recruitment" id="experience_edit_news" required="">
                 <option disabled selected value>Kinh nghiệm</option>
-                <option value="Chưa có" class="op_select_method_work">Chưa có</option>
-                <option value="1 năm" class="op_select_method_work">1 năm</option>
-                <option value="2 năm" class="op_select_method_work">2 năm</option>
-                <option value="3 năm" class="op_select_method_work">3 năm</option>
-                <option value="Hơn 3 năm" class="op_select_method_work">Hơn 3 năm</option>
+                <option value="Không yêu cầu" class="op_select_method_work">Không yêu cầu</option>
+                <option value="Ít nhất 1 năm" class="op_select_method_work">Ít nhất 1 năm</option>
+                <option value="Ít nhất 2 năm" class="op_select_method_work">Ít nhất 2 năm</option>
+                <option value="Ít nhất 3 năm" class="op_select_method_work">Ít nhất 3 năm</option>
             </select>
             {{!-- <input id="experience_edit_news" name="experience_recruitment" type="hidden" value="" /> --}}
 
