add function edit recruitment

--- a/src/server_employer/Source/views/contents/add_recruitment.hbs
+++ b/src/server_employer/Source/views/contents/add_recruitment.hbs
@@ -69,7 +69,7 @@
 
             <input type="submit" id="submit_edit_news" value="Xác nhận tạo" />
         </form>
-        <a id="cancle_edit_news" href="#">Hủy bỏ</a>
+        <a id="cancle_edit_news" href="/employer/manage_recruitments">Hủy bỏ</a>
     </div>
 </div>
 
