--- a/src/server_employer/Source/views/contents/edit_recruitment.hbs
+++ b/src/server_employer/Source/views/contents/edit_recruitment.hbs
@@ -2,69 +2,104 @@
     {{> menu}}
 
     <div id="content_edit_news_home_recruit">
-        <div id="text_edit_news">Chỉnh sửa tin tuyển dụng</div>
-        <div id="please_enter_edit">Vui lòng nhập thông tin cần chỉnh sửa</div>
-        <form action="">
+        <div id="text_edit_news">Chỉnh sửa tin tuyển dụng</div>
+        <div id="please_enter_edit">Vui lòng nhập thông tin cần thiết</div>
+        <form action="/employer/manage_recruitments" method="POST" id="edit_form">
+            <input type="hidden" id="id_recruitment" name="id_recruitment" value="5WmkSXKnRftGyJMHAiXoy" />
+
             <div id="label_title">Tiêu đề</div>
-            <input type="text" name="title_edit_news" id="title_edit_news" required
+            <input type="text" name="title_recruitment" id="title_edit_news" required
                 placeholder="Nhập tiêu đề tin tuyển dụng" />
+
             <div id="text_info_general">Thông tin chung</div>
             <div id="salary_edit_news">Mức lương</div>
-            <input type="number" name="min_salary_edit_news" id="min_salary_edit_news" required
+            <input type="number" name="min_salary_recruitment" id="min_salary_edit_news" required
                 placeholder="Tối thiểu" />
             <div id="line_edit_news"></div>
-            <input type="number" name="max_salary_edit_news" id="max_salary_edit_news" required placeholder="Tối đa" />
+            <input type="number" name="max_salary_recruitment" id="max_salary_edit_news" required
+                placeholder="Tối đa" />
+
             <div id="text_quantity_edit_news">Số lượng</div>
-            <input type="number" name="quantity_edit_news" id="quantity_edit_news" required placeholder="Số lượng" />
+            <input type="number" name="quantity_recruitment" id="quantity_edit_news" required placeholder="Số lượng" />
+
             <div id="text_method_word_edit_news">Hình thức làm việc</div>
-
-            <select name="method_work_edit_news" id="method_work_edit_news" required="">
+            <select name="method_work_recruitment" id="method_work_edit_news" required="">
                 <option disabled selected value>Hình thức làm việc</option>
-                <option value="" class="op_select_method_work">Full Time</option>
-                <option value="" class="op_select_method_work">Part Time</option>
-                <option value="" class="op_select_method_work">Remote</option>
+                <option value="Full Time" class="op_select_method_work">Full Time</option>
+                <option value="Part Time" class="op_select_method_work">Part Time</option>
+                <option value="Remote" class="op_select_method_work">Remote</option>
             </select>
-            <input id="method_work_edit_news" name="method_work_edit_news" type="hidden" value="" />
-            <div id="text_sex_edit_news">Giới tính</div>
+            {{!-- <input id="method_work_edit_news" name="method_work_recruitment" type="hidden" value="" /> --}}
 
-            <select name="sex_edit_news" id="sex_edit_news" required="">
+            <div id="text_sex_edit_news">Giới tính</div>
+            <select name="sex_recruitment" id="sex_edit_news" required="">
                 <option disabled selected value>Giới tính</option>
-                <option value="" class="op_select_method_work">Nam</option>
-                <option value="" class="op_select_method_work">Nữ</option>
+                <option value="Khác" class="op_select_method_work">Không yêu cầu</option>
+                <option value="Nam" class="op_select_method_work">Nam</option>
+                <option value="Nữ" class="op_select_method_work">Nữ</option>
             </select>
-            <input id="sex_edit_news" name="sex_edit_news" type="hidden" value="" />
+            {{!-- <input id="sex_edit_news" name="sex_recruitment" type="hidden" value="" /> --}}
 
             <div id="text_experience_edit_news">Kinh nghiệm</div>
 
-            <select name="experience_edit_news" id="experience_edit_news" required="">
+            <select name="experience_recruitment" id="experience_edit_news" required="">
                 <option disabled selected value>Kinh nghiệm</option>
-                <option value="" class="op_select_method_work">Chưa có</option>
-                <option value="" class="op_select_method_work">1 năm</option>
-                <option value="" class="op_select_method_work">2 năm</option>
-                <option value="" class="op_select_method_work">3 năm</option>
-                <option value="" class="op_select_method_work">Hơn 3 năm</option>
+                <option value="Không yêu cầu" class="op_select_method_work">Không yêu cầu</option>
+                <option value="Ít nhất 1 năm" class="op_select_method_work">Ít nhất 1 năm</option>
+                <option value="Ít nhất 2 năm" class="op_select_method_work">Ít nhất 2 năm</option>
+                <option value="Ít nhất 3 năm" class="op_select_method_work">Ít nhất 3 năm</option>
             </select>
-            <input id="experience_edit_news" name="experience_edit_news" type="hidden" value="" />
+            {{!-- <input id="experience_edit_news" name="experience_recruitment" type="hidden" value="" /> --}}
+
             <div id="text_deadline_submit_record_edit_news">Hạn nộp hồ sơ</div>
-            <input type="date" name="deadline_submit_record_edit_news" id="deadline_submit_record_edit_news" required
+            <input type="date" name="deadline_submit_record_recruitment" id="deadline_submit_record_edit_news" required
                 placeholder="Hạn nộp hồ sơ" />
+
             <div id="text_work_locatio_edit_news">Địa điểm làm việc</div>
-            <input type="text" name="word_location_edit_news" id="word_location_edit_news" required
+            <input type="text" name="word_location_recruitment" id="word_location_edit_news" required
                 placeholder="Nhập địa điểm làm việc" />
+
             <div id="text_job_describe">Mô tả công việc</div>
-            <textarea type="text" name="job_describe_edit_news" id="job_describe_edit_news" required></textarea>
+            <textarea type="text" name="job_describe_recruitment" id="job_describe_edit_news" required></textarea>
+
             <div id="text_require_candidate_edit_news">Yêu cầu ứng viên</div>
-            <textarea type="text" name="require_candidate_edit_news" id="require_candidate_edit_news"
+            <textarea type="text" name="require_candidate_recruitment" id="require_candidate_edit_news"
                 required></textarea>
+
             <div id="text_benefit_edit_news">Quyền lợi</div>
-            <textarea type="text" name="benefit_edit_news" id="benefit_edit_news" required></textarea>
-            <button type="submit" id="submit_edit_news">Cập nhật</button>
+            <textarea type="text" name="benefit_recruitment" id="benefit_edit_news" required></textarea>
+
+            <input type="submit" id="submit_edit_news" value="Xác nhận sửa" />
         </form>
-        <a id="cancle_edit_news" href="#">Hủy bỏ</a>
+        <a id="cancle_edit_news" href="/employer/manage_recruitments">Hủy bỏ</a>
     </div>
 </div>
 
 <script>
     $(".menu_item").removeClass("is_selected")
     $("#menu_manage_recruit_home_recruit").addClass("is_selected")
+
+    const _recruitment = {{{ data.recruitment }}}
+    $("#benefit_edit_news").val(_recruitment.benefits)
+    $("#job_describe_edit_news").val(_recruitment.description)
+
+    let _date = new Date(_recruitment.due_date._seconds * 1000)
+    let _due_date = _date.getFullYear() + "-" + (_date.getMonth() + 1 < 10 ? ("0" + (_date.getMonth() + 1)) : (_date.getMonth() + 1)) + "-" + (_date.getDate() < 10 ? ("0" + (_date.getDate())) : (_date.getDate()))
+    $("#deadline_submit_record_edit_news").val(_due_date)
+
+    $("#experience_edit_news").val(_recruitment.experience)
+    $("#sex_edit_news").val(_recruitment.gender)
+    $("#word_location_edit_news").val(_recruitment.location)
+    $("#max_salary_edit_news").val(_recruitment.max_salary)
+    $("#min_salary_edit_news").val(_recruitment.min_salary)
+    $("#quantity_edit_news").val(_recruitment.number_of_candidates)
+    $("#require_candidate_edit_news").val(_recruitment.requirements)
+    $("#title_edit_news").val(_recruitment.title)
+    $("#method_work_edit_news").val(_recruitment.working_form)
+
+    const current_url = $(location).attr("href")
+    const id_recruitment = current_url.slice(current_url.indexOf("?id=") + 4)
+    $("#id_recruitment").val(id_recruitment)
+    $("#edit_form").attr("action", "/employer/post_edit_recruitment?id=" + id_recruitment)
+    $("#cancle_edit_news").attr("href", "/employer/post_edit_recruitment?id=" + id_recruitment)
 </script>
