hoan thanh chuc nang quen mat khau cho candidate

--- a/src/server_candidate/Source/views/candidate/content_forget_password.hbs
+++ b/src/server_candidate/Source/views/candidate/content_forget_password.hbs
@@ -2,12 +2,25 @@
     <div id="rectangle_form_reset_password">
         <div id="text_setup_password">Đặt lại mật khẩu của bạn</div>
         <div id="text_please_fill">Vui lòng nhập đia chỉ email để khôi phục tài khoản của bạn</div>
-        <form action="">
+        <form method="post" action="/auth/forget_password">
+
+            {{#if message}}
+            <div class="alert alert-success mt-2">
+                {{message}}
+            </div>
+            {{/if}}
+
+            {{#if messageDanger}}
+            <div class="alert alert-danger mt-2">
+                {{messageDanger}}
+            </div>
+            {{/if}}
+
+
             <div id="label_email_forget_password">Email</div>
-            <input type="email" name="email_signin" id="email_forget_password" required
-                placeholder="Nhập email của bạn">
+            <input type="email" name="email" id="email_forget_password" required placeholder="Nhập email của bạn">
             <img src="/css/style/image/logo_email.svg" id="logo_email_forget_password" alt="logo_email_forget_password">
-            <button type="submit" id="submit_forget_password" href="/candidate/authentication">Gửi</button>
+            <button type="submit" id="submit_forget_password">Gửi</button>
         </form>
 
     </div>
