--- a/src/server_candidate/Source/views/candidate/content_reset_password.hbs
+++ b/src/server_candidate/Source/views/candidate/content_reset_password.hbs
@@ -1,7 +1,11 @@
  <div id="rectangle_mid_reset_password">
             <div id="rectangle_form_reset_password">
                 <div id="text_reset_password">Đặt lại mật khẩu của bạn</div>
-                <form action="">
+                <form method="post" action="/auth/reset_password">
+
+                    <input type="hidden" name="token" value="{{token}}">
+                    <input type="hidden" name="email" value="{{email}}">
+
                     <div id="label_new_password">Mật khẩu mới</div>
                     <input type="password" name="new_password" id="new_password"  required placeholder="Nhập mật khẩu mới">
                     <img src="/css/style/image/logo_password.svg" id="logo_password_reset_password_1" alt="logo_password_reset_password">
