fix validation reset password

--- a/src/server_candidate/Source/views/candidate/content_reset_password.hbs
+++ b/src/server_candidate/Source/views/candidate/content_reset_password.hbs
@@ -1,7 +1,8 @@
  <div id="rectangle_mid_reset_password">
             <div id="rectangle_form_reset_password">
                 <div id="text_reset_password">Đặt lại mật khẩu của bạn</div>
-                <form method="post" action="/auth/reset_password">
+                <form method="post" action="/auth/reset_password"  class="needs-validation"
+            oninput='confirm_new_password.setCustomValidity(confirm_new_password.value != new_password.value ? "Mật khẩu nhập lại không đúng !" : "")'>
 
                     <input type="hidden" name="token" value="{{token}}">
                     <input type="hidden" name="email" value="{{email}}">
